--- a/calc2.html
+++ b/calc2.html
@@ -587,7 +587,7 @@
 		let attackBuff = buff[0] + Math.ceil((buff[1] - buff[0]) / 10 * skillLv * 10) / 10;
 		$("txtAttackBuff").value -= -attackBuff;
 	    }
-	    if(buff = skill.accDefDecreaseSingle) {
+	    if(buff = skill.accDefDecrease) {
 		let defDecrease = buff[0] + Math.ceil((buff[1] - buff[0]) / 10 * skillLv * 10) / 10;
         	$("txtEnemyDefence1").value -= defDecrease;
     	    }
